Update for Moz35

--- a/hu/browser/chrome/browser/browser.properties
+++ b/hu/browser/chrome/browser/browser.properties
@@ -103,13 +103,6 @@ popupShowPopupPrefix='%S' megjelenítése
 badContentBlocked.blocked.message=A %S tartalmat blokkol ezen az oldalon.
 badContentBlocked.notblocked.message=A %S nem blokkol tartalmat ezen az oldalon.
 
-# missing plugin installer
-installPlugin.message = Szeretné telepíteni az oldalon lévő média megjelenítéséhez szükséges bővítményt?
-installPlugin.button.label=%S telepítése
-installPlugin.button.accesskey=T
-installPlugin.ignoreButton.label=Ne kérdezze meg újra
-installPlugin.ignoreButton.accesskey=n
-
 crashedpluginsMessage.title=A(z) %S bővítmény összeomlott.
 crashedpluginsMessage.reloadButton.label=Újratöltés
 crashedpluginsMessage.reloadButton.accesskey=R
@@ -562,13 +555,18 @@ getUserMedia.stopSharing.accesskey = E
 
 getUserMedia.sharingMenu.label = Eszközöket megosztó lapok
 getUserMedia.sharingMenu.accesskey = E
-# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
-#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
-#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera
+#                    getUserMedia.sharingMenuMicrophone,
+#                    getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen,
+#                    getUserMedia.sharingMenuWindow,
 #                    getUserMedia.sharingMenuCameraMicrophone,
 #                    getUserMedia.sharingMenuCameraMicrophoneApplication,
 #                    getUserMedia.sharingMenuCameraMicrophoneScreen,
 #                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuCameraApplication,
+#                    getUserMedia.sharingMenuCameraScreen,
+#                    getUserMedia.sharingMenuCameraWindow,
 #                    getUserMedia.sharingMenuMicrophoneApplication,
 #                    getUserMedia.sharingMenuMicrophoneScreen,
 #                    getUserMedia.sharingMenuMicrophoneWindow):
@@ -582,6 +580,9 @@ getUserMedia.sharingMenuCameraMicrophone = %S (kamera és mikrofon)
 getUserMedia.sharingMenuCameraMicrophoneApplication = %S (kamera, mikrofon és alkalmazás)
 getUserMedia.sharingMenuCameraMicrophoneScreen = %S (kamera, mikrofon és képernyő)
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (kamera, mikrofon és ablak)
+getUserMedia.sharingMenuCameraApplication = %S (kamera és alkalmazás)
+getUserMedia.sharingMenuCameraScreen = %S (kamera és képernyő)
+getUserMedia.sharingMenuCameraWindow = %S (kamera és ablak)
 getUserMedia.sharingMenuMicrophoneApplication = %S (mikrofon és alkalmazás)
 getUserMedia.sharingMenuMicrophoneScreen = %S (mikrofon és képernyő)
 getUserMedia.sharingMenuMicrophoneWindow = %S (mikrofon és ablak)
@@ -603,3 +604,12 @@ slowStartup.disableNotificationButton.accesskey = N
 customizeTips.tip0 = %1$S: A %2$S személyre szabható, hogy kívánsága szerint működjön. Csak húzza a fentieket a menüre vagy az eszköztárra. %3$S a %2$S személyre szabásáról.
 customizeTips.tip0.hint = Tipp
 customizeTips.tip0.learnMore = További információ
+
+# LOCALIZATION NOTE(appmenu.*.description, appmenu.*.label): these are used for
+# the appmenu labels and buttons that appear when an update is staged for
+# installation or a background update has failed and a manual download is required.
+# %S is brandShortName
+appmenu.restartNeeded.description = %S újraindítása a frissítéshez
+appmenu.updateFailed.description = A háttérben végzett frissítés sikertelen, töltse le a frissítést
+appmenu.restartBrowserButton.label = %S újraindítása
+appmenu.downloadUpdateButton.label = Frissítés letöltése
