--- a/hu/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/hu/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,8 +97,19 @@ quit-button.tooltiptext.linux2 = Kilépés a %1$Sból  (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Kilépés a %1$Sból  (%2$S)
 
+loop-call-button2.label = Beszélgetés kezdése
+loop-call-button2.tooltiptext = Beszélgetés kezdése
+
+social-share-button.label = Oldal megosztása
+social-share-button.tooltiptext = Oldal megosztása
+
 panic-button.label = Elfelejtés
 panic-button.tooltiptext = Böngészési előzmények elfelejtése
 
-loop-call-button.label = Meghívás beszélgetésre
-loop-call-button.tooltiptext = Meghívás beszélgetésre
+web-apps-button.label = Appok
+web-apps-button.tooltiptext = Appok keresése
+
+# LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
+# widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
+devtools-webide-button.label = WebIDE
+devtools-webide-button.tooltiptext = WebIDE megnyitása
