--- a/hu/browser/chrome/browser/devtools/webide.properties
+++ b/hu/browser/chrome/browser/devtools/webide.properties
@@ -19,8 +19,12 @@ importPackagedApp_title=Válasszon könyvtárat
 importHostedApp_title=Kiszolgálóoldali app megnyitása
 importHostedApp_header=Írja be a Manifest URL-jét
 
-notification_showTroubleShooting_label=hibaelhárítás
+notification_showTroubleShooting_label=Hibaelhárítás
 notification_showTroubleShooting_accesskey=t
+
+# LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
+# title for browser tab projects when the tab is still loading.
+project_tab_loading=Betöltés…
 
 # These messages appear in a notification box when an error occur.
 
