--- a/hu/browser/chrome/browser/loop/loop.properties
+++ b/hu/browser/chrome/browser/loop/loop.properties
@@ -4,7 +4,17 @@
 
 # Panel Strings
 
+## LOCALIZATION NOTE(clientShortname2): This should not be localized and
+## should remain "Firefox Hello" for all locales.
+clientShortname2=Firefox Hello
+
+## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
+## replaced by the brand name
+first_time_experience_title={{clientShortname}} – Csatlakozzon a társalgáshoz
+first_time_experience_button_label=Kezdő lépések
+
 share_link_header_text=Ossza meg ezt valaki meghívásához a beszélgetésbe:
+invite_header_text=Hívjon meg valakit a csatlakozásra.
 
 ## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
@@ -52,12 +62,14 @@ problem_accessing_account=Hiba történt a fiókja elérésekor
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error for location
 retry_button=Újra
 
-share_email_subject3=Meghívták egy beszélgetésbe
-## LOCALIZATION NOTE (share_email_body3): In this item, don't translate the
+share_email_subject4={{clientShortname}} – Csatlakozzon a társalgáshoz
+## LOCALIZATION NOTE (share_email_body4): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
-share_email_body3=A meghívó elfogadásához másolja ezt a hivatkozást vagy kattintson rá a beszélgetés megkezdéséhez:↩\n↩\n {{callUrl}}
+share_email_body4=Hello!\r\n\r\nCsatlakozzon hozzám egy videocsevegéshez a {{clientShortname}} használatával:\r\n\r\nNem kell semmit letölteni vagy telepíteni. Csak másolja ezt az URL-címet a böngészőjébe:\r\n\r\n{{callUrl}}\r\n\r\nHa szeretné, többet is megtudhat a {{clientShortname}}ról itt: {{learnMoreUrl}}\r\n\r\nHamarosan beszélünk!
 share_button=E-mail
+share_button2=Hivatkozás küldése
 copy_url_button=Másolás
+copy_url_button2=Hivatkozás másolása
 copied_url_button=Másolva!
 
 panel_footer_signin_or_signup_link=Bejelentkezés vagy regisztráció
@@ -85,6 +97,10 @@ new_contact_button=Új névjegy
 ## and click the 'New Contact' button to see the fields.
 new_contact_name_placeholder=Név
 new_contact_email_placeholder=E-mail
+new_contact_phone_placeholder=Firefox OS telefon
+
+contacts_blocked_contacts=Blokkolt partnerek
+
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
@@ -174,6 +190,7 @@ initiate_call_button_label2=Készen áll a beszélgetésre?
 incoming_call_title2=Beszélgetési kérés
 incoming_call_accept_button=Elfogadás
 incoming_call_accept_audio_only_tooltip=Elfogadás hanggal
+incoming_call_accept_audio_video_tooltip=Elfogadás videóval
 incoming_call_cancel_button=Mégse
 incoming_call_cancel_and_block_button=Megszakítás és blokkolás
 incoming_call_block_button=Tiltás
@@ -238,11 +255,16 @@ connection_error_see_console_notification=A hívás sikertelen, részletekért l
 ## LOCALIZATION NOTE (legal_text_and_links3): In this item, don't translate the
 ## parts between {{..}} because these will be replaced with links with the labels
 ## from legal_text_tos and legal_text_privacy. clientShortname will be replaced
-## by the brand name, or fall back to client_shortname_fallback
+## by the brand name.
 legal_text_and_links3=A {{clientShortname}} használatával elfogadja a {{terms_of_use}} és az {{privacy_notice}}.
 legal_text_tos = felhasználási feltételeket
 legal_text_privacy = adatvédelmi megjegyzést
-client_shortname_fallback=jelen termék
+
+## LOCALIZATION NOTE (powered_by_beforeLogo, powered_by_afterLogo):
+## These 2 strings are displayed before and after a 'Telefonica'
+## logo.
+powered_by_beforeLogo=A motorháztető alatt
+powered_by_afterLogo=
 
 feedback_call_experience_heading2=Milyen volt a beszélgetés?
 feedback_what_makes_you_sad=Miért szomorú?
@@ -267,3 +289,30 @@ feedback_rejoin_button=Újracsatlakozás
 ## LOCALIZATION NOTE (feedback_report_user_button): Used to report a user in the case of
 ## an abusive user.
 feedback_report_user_button=Felhasználó jelentése
+
+help_label=Súgó
+tour_label=Bemutató
+
+## LOCALIZATION NOTE(rooms_default_room_name_template): {{conversationLabel}}
+## will be replaced by a number. For example "Conversation 1" or "Conversation 12".
+rooms_default_room_name_template={{conversationLabel}}. csevegés
+rooms_leave_button_label=Oldal elhagyása
+rooms_list_copy_url_tooltip=Hivatkozás másolása
+## LOCALIZATION NOTE (rooms_list_current_conversations):
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## We prefer to have no number in the string, but if you need it for your
+## language please use {{num}}.
+rooms_list_current_conversations=Jelenlegi csevegés;Jelenlegi csevegések
+rooms_list_delete_tooltip=Csevegés törlése
+rooms_list_deleteConfirmation_label=Biztos benne?
+rooms_list_no_current_conversations=Nincsenek csevegések
+rooms_name_this_room_label=Csevegés elnevezése
+rooms_new_room_button_label=Beszélgetés kezdése
+rooms_only_occupant_label=Ön itt az első.
+rooms_panel_title=Válasszon egy csevegést, vagy indítson újat
+rooms_room_full_label=Már van két személy ebben a csevegésben.
+rooms_room_full_call_to_action_nonFx_label=Saját indításához töltse le a {{brandShortname}}ot
+rooms_room_full_call_to_action_label=Tudjon meg többet a {{clientShortname}}ról »
+rooms_room_joined_label=Valaki csatlakozott a csevegéshez!
+rooms_room_join_label=Csatlakozzon a csevegéshez
