--- a/hu/dom/chrome/accessibility/AccessFu.properties
+++ b/hu/dom/chrome/accessibility/AccessFu.properties
@@ -157,6 +157,7 @@ statePressed     =    megnyomva
 stateExpanded    =    kibontva
 stateCollapsed   =    összecsukva
 stateUnavailable =    nem érhető el
+stateReadonly    =    írásvédett
 stateRequired    =    szükséges
 stateTraversed   =    meglátogatott
 stateHasPopup    =    van felugró
