--- a/hu/mobile/android/chrome/browser.properties
+++ b/hu/mobile/android/chrome/browser.properties
@@ -322,6 +322,10 @@ remoteNotificationGenericName=Alkalmazás
 # LOCALIZATION NOTE (remoteNotificationMessage): %S is the port on which
 # the remote debugger server is listening.
 remoteNotificationMessage=Figyelés ezen a porton: %S
+# LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
+remoteStartNotificationTitle=%S hibakeresésének bekapcsolása
+# LOCALIZATION NOTE (remoteStartNotificationMessage):
+remoteStartNotificationMessage=Koppintson a távoli hibakereső bekapcsolásához
 
 # Helper apps
 helperapps.open=Megnyitás
