--- a/hu/security/manager/chrome/pipnss/nsserrors.properties
+++ b/hu/security/manager/chrome/pipnss/nsserrors.properties
@@ -122,6 +122,18 @@ SSL_ERROR_NEXT_PROTOCOL_DATA_INVALID=Az SSL érvénytelen NPN kiterjesztésadato
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SSL2=Az SSL szolgáltatás nem támogatott SSL 2.0 kapcsolatokhoz.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SERVERS=Az SSL szolgáltatás nem támogatott kiszolgálókhoz.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_CLIENTS=Az SSL szolgáltatás nem támogatott kliensekhez.
+SSL_ERROR_INVALID_VERSION_RANGE=Az SSL verziótartomány nem érvényes.
+SSL_ERROR_CIPHER_DISALLOWED_FOR_VERSION=Az SSL partner a kijelölt protokollverzióhoz nem engedélyezett titkosítócsomagot választott.
+SSL_ERROR_RX_MALFORMED_HELLO_VERIFY_REQUEST=Az SSL rosszul formázott Hello Verify Request kézfogásüzenetet kapott.
+SSL_ERROR_RX_UNEXPECTED_HELLO_VERIFY_REQUEST=Az SSL váratlan Hello Verify Request kézfogásüzenetet kapott.
+SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_VERSION=Az SSL funkció nem támogatott a protokollverzióhoz.
+SSL_ERROR_RX_UNEXPECTED_CERT_STATUS=Az SSL váratlan tanúsítványstátusz kézfogásüzenetet kapott.
+SSL_ERROR_UNSUPPORTED_HASH_ALGORITHM=A TLS partner nem támogatott hash algoritmust használt.
+SSL_ERROR_DIGEST_FAILURE=A kivonatoló függvény sikertelen.
+SSL_ERROR_INCORRECT_SIGNATURE_ALGORITHM=A digitálisan aláírt elemben helytelen aláírási algoritmus van megadva.
+SSL_ERROR_NEXT_PROTOCOL_NO_CALLBACK=A következő protokoll tárgyalási kiterjesztés be lett kapcsolva, de a visszahívás törölve lett a szükségessé válása előtt.
+SSL_ERROR_NEXT_PROTOCOL_NO_PROTOCOL=A kiszolgáló nem támogat olyan protokollokat, amelyeket a kliens az ALPN kiterjesztésben hirdet.
+SSL_ERROR_INAPPROPRIATE_FALLBACK_ALERT=A kiszolgáló visszautasította a kézfogást, mert a kliens a szerver által támogatottnál régebbi TLS verzióra állt vissza.
 SEC_ERROR_IO=I/O hiba történt a biztonsági hitelesítés közben.
 SEC_ERROR_LIBRARY_FAILURE=biztonsági könyvtár hibája.
 SEC_ERROR_BAD_DATA=biztonsági könyvtár: rossz adatok érkeztek.
