--- a/hu/browser/chrome/browser/devtools/app-manager.properties
+++ b/hu/browser/chrome/browser/devtools/app-manager.properties
@@ -2,6 +2,9 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+index.deprecationNotice=Az Appkezelő eltávolításra kerül egy jövőbeli verzióban. A projektjei át lettek költöztetve a WebIDE-be.
+index.launchWebIDE=WebIDE indítása
+index.readMoreAboutWebIDE=További tudnivalók
 # LOCALIZATION NOTE (device.deviceSize): %1$S is the device's width, %2$S is
 # the device's height, %3$S is the device's pixel density.
 # Example: 800x480 (86 DPI).
