--- a/hu/browser/chrome/browser/places/places.properties
+++ b/hu/browser/chrome/browser/places/places.properties
@@ -75,16 +75,17 @@ OrganizerQueryDownloads=Letöltések
 OrganizerQueryAllBookmarks=Minden könyvjelző
 OrganizerQueryTags=Címkék
 
-# LOCALIZATION NOTE (tagResultLabel) :
+# LOCALIZATION NOTE (tagResultLabel, bookmarkResultLabel, switchtabResultLabel,
+# keywordResultLabel, searchengineResultLabel)
 # Noun used to describe the location bar autocomplete result type
 # to users with screen readers
 # See createResultLabel() in urlbarBindings.xml
 tagResultLabel=Elem
-# LOCALIZATION NOTE (bookmarkResultLabel) :
-# Noun used to describe the location bar autocomplete result type
-# to users with screen readers
-# See createResultLabel() in urlbarBindings.xml
 bookmarkResultLabel=Könyvjelző
+switchtabResultLabel=Tab
+keywordResultLabel=Kulcsszó
+searchengineResultLabel=Keresés
+
 
 # LOCALIZATION NOTE (lockPrompt.text)
 # %S will be replaced with the application name.
