--- a/hu/dom/chrome/layout/css.properties
+++ b/hu/dom/chrome/layout/css.properties
@@ -56,6 +56,7 @@ PECounterExtendsNotIdent=Az extends rendszerhez várt azonosító helyett „%1$
 PECounterASWeight=Az additive-symbols leíró minden súlyának kisebbnek kell lennie az előző súlynál.
 PEClassSelEOF=osztálynév
 PEClassSelNotIdent=A várt osztályszelektor-azonosító helyett „%1$S” található.
+PECoordinatePair=A várt koordinátapár helyett „%1$S” található.
 PETypeSelEOF=elemtípus
 PETypeSelNotType=A várt elemnév vagy „*” helyett „%1$S”” található.
 PEUnknownNamespacePrefix=Ismeretlen névtérelőtag: „%1$S”.
