--- a/hu/dom/chrome/security/security.properties
+++ b/hu/dom/chrome/security/security.properties
@@ -8,8 +8,12 @@ CrossSiteRequestBlocked=Cross-Origin kérés blokkolva: Az azonos eredet házire
 
 # LOCALIZATION NOTE: Do not translate "Strict-Transport-Security" or "HSTS"
 InvalidSTSHeaders=A webhely érvénytelen Strict-Transport-Security fejlécet adott meg.
+# LOCALIZATION NOTE: Do not translate "Public-Key-Pins or HPKP"
+InvalidPKPHeaders=Az oldal érvénytelen Public-Key-Pins fejlécet adott meg.
 InsecurePasswordsPresentOnPage=Jelszómezők találhatók egy nem biztonságos (http://) oldalon. Ez biztonsági kockázat, amely lehetővé teszi a bejelentkezési adatok ellopását.
 InsecureFormActionPasswordsPresent=Jelszómezők találhatók egy nem biztonságos (http://) űrlapműveletet tartalmazó űrlapon. Ez biztonsági kockázat, amely lehetővé teszi a bejelentkezési adatok ellopását.
 InsecurePasswordsPresentOnIframe=Jelszómezők találhatók egy nem biztonságos (http://) iframe-en. Ez biztonsági kockázat, amely lehetővé teszi a bejelentkezési adatok ellopását.
 LoadingMixedActiveContent=Vegyes (nem biztonságos) aktív tartalom betöltése a biztonságos „%1$S” oldalon
 LoadingMixedDisplayContent=Vegyes (nem biztonságos) megjelenített tartalom betöltése a biztonságos „%1$S” oldalon
+# LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
+BothAllowScriptsAndSameOriginPresent=Ha egy iframe sandbox attribútumában az allow-scripts és az allow-same-origin is be van állítva, akkor az eltávolíthatja a sandboxingot.
