--- a/hu/netwerk/necko.properties
+++ b/hu/netwerk/necko.properties
@@ -37,3 +37,5 @@ PhishingAuth=Ön a következő webhelyet fogja meglátogatni: „%1$S”. Ez a w
 PhishingAuthAccept=Értem, majd vigyázok
 SuperfluousAuth=Ön be fog jelentkezni a(z) „%1%S” webhelyre a(z) „%2$S” felhasználónévvel, azonban a webhely nem is igényli az azonosítást. Ez kísérlet lehet az Ön megtévesztésére.\n\nBiztosan a(z) „%1$S” webhelyet kívánja meglátogatni?
 AutomaticAuth=Ön be fog jelentkezni a(z) „%1$S” webhelyre a(z) „%2$S” felhasználónévvel.
+
+TrackingUriBlocked=Az erőforrás itt: „%1$S” blokkolva lett, mert a követés elleni védelem engedélyezett.
