fix compare-locale warnings and some corrections in browser

--- a/ja/browser/chrome/browser/devtools/debugger.properties
+++ b/ja/browser/chrome/browser/devtools/debugger.properties
@@ -83,7 +83,7 @@ noSourcesText				= このページにソースはありません。
 
 # LOCALIZATION NOTE (loadingSourcesText): The text to display in the sources menu
 # when waiting for scripts to load.
-loadingSourcesText			= ソースをロード中...
+loadingSourcesText			= ソースを読み込み中...
 
 # LOCALIZATION NOTE (noEventListenersText): The text to display in the events tab
 # when there are no events.
@@ -95,7 +95,7 @@ noStackFramesText			= 表示できるスタックフレームはありません
 
 # LOCALIZATION NOTE (noStackFramesText): The text to display in the traces tab
 # when there are no function calls.
-noFunctionCallsText			= 幼児できる関数呼び出しはありません
+noFunctionCallsText			= 表示できる関数呼び出しはありません
 
 # LOCALIZATION NOTE (tracingNotStartedText): The text to display in the traces tab
 # when when tracing hasn't started yet.
@@ -212,11 +212,11 @@ breakpointMenuItem.deleteAll		= すべてのブレークポイントを取り除
 # LOCALIZATION NOTE (loadingText): The text that is displayed in the script
 # editor when the loading process has started but there is no file to display
 # yet.
-loadingText				= ロード中...
+loadingText				= 読み込み中...
 
 # LOCALIZATION NOTE (errorLoadingText): The text that is displayed in the debugger
 # viewer when there is an error loading a file
-errorLoadingText			= ソースのロードに失敗しました :\n
+errorLoadingText			= ソースの読み込みに失敗しました :\n
 
 # LOCALIZATION NOTE (addWatchExpressionText): The text that is displayed in the
 # watch expressions list to add a new item.
@@ -256,7 +256,7 @@ variablesViewErrorStacktrace		= スタックトレース:
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 number of remaining items in the object
 # example: 3 more…
-variablesViewMoreObjects		= #1 個...
+variablesViewMoreObjects		= 他 #1 個...
 
 # LOCALIZATION NOTE (variablesEditableNameTooltip): The text that is displayed
 # in the variables list on an item with an editable name.
@@ -302,7 +302,7 @@ variablesSeparatorLabel			= :
 
 # LOCALIZATION NOTE (watchExpressionsSeparatorLabel): The text that is displayed
 # in the watch expressions list as a separator between the code and evaluation.
-watchExpressionsSeparatorLabel		= \ \u2192
+watchExpressionsSeparatorLabel		= \u0020\u2192
 
 # LOCALIZATION NOTE (functionSearchSeparatorLabel): The text that is displayed
 # in the functions search panel as a separator between function's inferred name
