--- a/ja/browser/chrome/browser/devtools/inspector.properties
+++ b/ja/browser/chrome/browser/devtools/inspector.properties
@@ -50,7 +50,7 @@ markupView.more.showAll			= すべてのノード (%S個) を表示
 inspector.tooltip			= DOM とスタイルシートの調査
 
 #LOCALIZATION NOTE: Used in the image preview tooltip when the image could not be loaded
-previewTooltip.image.brokenImage	= 画像をロードできません
+previewTooltip.image.brokenImage	= 画像を読み込めません
 
 #LOCALIZATION NOTE: Used in the image preview tooltip when the image could not be loaded
 eventsTooltip.openInDebugger		= デバッガで開く
