--- a/ja/browser/chrome/browser/devtools/netmonitor.properties
+++ b/ja/browser/chrome/browser/devtools/netmonitor.properties
@@ -148,7 +148,7 @@ networkMenu.minute	= %S 分
 # LOCALIZATION NOTE (pieChart.loading): This is the label displayed
 # for pie charts (e.g., in the performance analysis view) when there is
 # no data available yet.
-pieChart.loading	= ロード中
+pieChart.loading	= 読み込み中
 
 # LOCALIZATION NOTE (pieChart.unavailable): This is the label displayed
 # for pie charts (e.g., in the performance analysis view) when there is
@@ -189,7 +189,7 @@ charts.totalSize	= サイズ: %S KB
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # This is the label displayed in the performance analysis view for the
 # total requests time, in seconds.
-charts.totalSeconds	= 所要時間: %S 秒
+charts.totalSeconds	= 所要時間: #1 秒
 
 # LOCALIZATION NOTE (charts.totalCached): This is the label displayed
 # in the performance analysis view for total cached responses.
