--- a/ja/browser/chrome/browser/devtools/styleeditor.properties
+++ b/ja/browser/chrome/browser/devtools/styleeditor.properties
@@ -33,7 +33,7 @@ newStyleSheet			= 新しいスタイルシート #%S
 ruleCount.label			= #1 個のルール
 
 # LOCALIZATION NOTE  (error-load): This is shown when loading fails.
-error-load			= スタイルシートをロードできませんでした。
+error-load			= スタイルシートを読み込めませんでした。
 
 # LOCALIZATION NOTE  (error-save): This is shown when saving fails.
 error-save			= スタイルシートを保存できませんでした。
