--- a/it/browser/chrome/browser/devtools/timeline.properties
+++ b/it/browser/chrome/browser/devtools/timeline.properties
@@ -15,3 +15,12 @@ timeline.label.domevent = Eventi DOM
 timeline.label.consoleTime = Console
 graphs.memory = MB
 timeline.markerDetailFormat = %1$S (%2$S)
+timeline.markerDetail.start = Inizio:
+timeline.markerDetail.end = Fine:
+timeline.markerDetail.duration = Durata:
+timeline.markerDetail.consoleTimerName = Nome timer:
+timeline.markerDetail.DOMEventType = Tipo evento:
+timeline.markerDetail.DOMEventPhase = Fase:
+timeline.markerDetail.DOMEventTargetPhase = Obiettivo
+timeline.markerDetail.DOMEventCapturingPhase = Acquisizione
+timeline.markerDetail.DOMEventBubblingPhase = Bubbling
