[TrUp] Suite: tracking activity

--- a/it/suite/chrome/common/dataman/dataman.properties
+++ b/it/suite/chrome/common/dataman/dataman.properties
@@ -27,6 +27,7 @@ perm.script.label = Esegui script
 perm.stylesheet.label = Carica fogli di stile
 perm.sts/use.label = Usa Strict Transport Security
 perm.sts/subd.label = Applica Strict Transport Security ai sottodomini
+perm.trackingprotection.label = Attività di tracciamento
 perm.type.default = Seleziona un tipo
 pwd.hidePasswords = Nascondi password
 pwd.hidePasswords.accesskey = w
