--- a/it/suite/chrome/common/notification.properties
+++ b/it/suite/chrome/common/notification.properties
@@ -9,13 +9,9 @@ carbonfailurepluginsMessage.title = Questa pagina richiede un plugin che può es
 carbonfailurepluginsMessage.button.label = Riavvia in modalità 32 bit
 carbonfailurepluginsMessage.button.accesskey = R
 missingpluginsMessage.title = Altri plugin sono necessari per visualizzare tutti gli oggetti di questa pagina.
-missingpluginsMessage.button.label = Installa plugin mancanti…
-missingpluginsMessage.button.accesskey = I
 blockedpluginsMessage.title = Alcuni plugin necessari per questa pagina sono stati bloccati per la tua sicurezza.
 blockedpluginsMessage.infoButton.label = Dettagli…
 blockedpluginsMessage.infoButton.accesskey = D
-blockedpluginsMessage.searchButton.label = Aggiorna plugin…
-blockedpluginsMessage.searchButton.accesskey = A
 crashedpluginsMessage.title = Si è verificato un arresto anomalo del plugin %S.
 crashedpluginsMessage.reloadButton.label = Ricarica la pagina
 crashedpluginsMessage.reloadButton.accesskey = R
@@ -124,8 +120,10 @@ updatePromptCheckButton.accesskey = C
 SecurityTitle = Avviso di sicurezza
 MixedContentMessage = È stata richiesta una pagina cifrata che contiene alcune informazioni non cifrate. Le informazioni visualizzate o inserite in questa pagina potrebbero essere facilmente intercettate da terzi.
 MixedActiveContentMessage = È stata richiesta una pagina cifrata che contiene informazioni non sicure. Le informazioni visualizzate o inserite in questa pagina possono essere facilmente lette da una terza parte.
+TrackingContentMessage = Parti di questa pagina potrebbero tracciare la propria attività online.
 MixedDisplayContentMessage = La pagina richiesta è solo parzialmente cifrata e non è possibile garantire la protezione da intercettazioni.
 BlockedActiveContentMessage = Le informazioni non sicure in questa pagina sono state bloccate.
+BlockedTrackingContentMessage = Parti della pagina, che tracciano la propria attività online, sono state bloccate.
 BlockedDisplayContentMessage = Le informazioni non cifrate in questa pagina sono state bloccate.
 EnterInsecureMessage = È stata abbandonata una pagina cifrata. Le informazioni inviate o ricevute da ora in poi potrebbero essere facilmente intercettate da terzi.
 EnterSecureMessage = È stata richiesta una pagina cifrata. Il sito si è identificato correttamente e le informazioni visualizzate o inserite in questa pagina non possono essere facilmente intercettate da terzi.
