Bug 1056923 - Add WebIDE launch button

--- a/pl/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/pl/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -57,5 +57,5 @@ panic-button.label=Wyczyść
 panic-button.tooltiptext=Wyczyść ostatnią historię przeglądania
 web-apps-button.label=Aplikacje
 web-apps-button.tooltiptext=Odkrywaj aplikacje
-devtools-webide-button.label=WebIDE
-devtools-webide-button.tooltiptext=Otwórz WebIDE
+devtools-webide-button2.label=WebIDE
+devtools-webide-button2.tooltiptext=Otwórz WebIDE (%S)
