Bug 1086492 - Disable tilt for E10S

--- a/pl/browser/chrome/browser/devtools/gclicommands.properties
+++ b/pl/browser/chrome/browser/devtools/gclicommands.properties
@@ -19,9 +19,7 @@ helpDesc=Pomoc na temat dostępnych poleceń
 # LOCALIZATION NOTE (helpAvailable) Used in the output of the help command to
 # explain the contents of the command help table.
 helpAvailable=Dostępne polecenia
-
-# LOCALIZATION NOTE (consoleDesc) A very short string used to describe the
-# function of the console command.
+notAvailableInE10S=Polecenie „%1$S” jest niedostępne w trybie wieloprocesowym (E10S)
 consoleDesc=Polecenia sterowania konsolą
 
 # LOCALIZATION NOTE (consoleManual) A longer description describing the
