--- a/fr/browser/chrome/browser/loop/loop.properties
+++ b/fr/browser/chrome/browser/loop/loop.properties
@@ -196,10 +196,10 @@ incoming_call_cancel_and_block_button=Annuler et bloquer
 incoming_call_block_button=Bloquer
 hangup_button_title=Raccrocher
 hangup_button_caption2=Quitter
-mute_local_audio_button_title=Couper la diffusion audio
-unmute_local_audio_button_title=Reprendre la diffusion audio
-mute_local_video_button_title=Couper la diffusion vidéo
-unmute_local_video_button_title=Reprendre la diffusion vidéo
+mute_local_audio_button_title=Couper votre micro
+unmute_local_audio_button_title=Réactiver votre micro
+mute_local_video_button_title=Couper votre caméra
+unmute_local_video_button_title=Réactiver votre caméra
 
 ## LOCALIZATION NOTE (call_with_contact_title): The title displayed
 ## when calling a contact. Don't translate the part between {{..}} because
@@ -222,7 +222,7 @@ call_progress_connecting_description=Connexion…
 ## LOCALIZATION NOTE (call_progress_ringing_description): This is displayed
 ## when the other client is actually ringing.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
-call_progress_ringing_description=Sonnerie…
+call_progress_ringing_description=Ça sonne…
 
 peer_ended_conversation2=Votre correspondant a mis fin à la conversation.
 conversation_has_ended=Votre conversation est terminée.
