--- a/pt-BR/dom/chrome/security/security.properties
+++ b/pt-BR/dom/chrome/security/security.properties
@@ -9,6 +9,7 @@ CrossSiteRequestBlocked=Pedido entre origens bloqueado: a política de mesma ori
 # LOCALIZATION NOTE: Do not translate "Strict-Transport-Security" or "HSTS"
 InvalidSTSHeaders=O site especificou um cabeçalho Strict-Transport-Security inválido.
 # LOCALIZATION NOTE: Do not translate "Public-Key-Pins or HPKP"
+InvalidPKPHeaders=O site especificou um cabeçalho Public-Key-Pins inválido.
 InsecurePasswordsPresentOnPage=Campos de senha presentes em uma página insegura (http://). Este é um risco de segurança que permite que credenciais de login do usuário sejam roubadas.
 InsecureFormActionPasswordsPresent=Campos de senha presentes em um formulário que será enviado a uma página insegura (http://). Este é um risco de segurança que permite que credenciais de login do usuário sejam roubadas.
 InsecurePasswordsPresentOnIframe=Campos de senha presentes em um iframe inseguro (http://). Este é um risco de segurança que permite que credenciais de login do usuário sejam roubadas.
