--- a/pt-BR/security/manager/chrome/pipnss/nsserrors.properties
+++ b/pt-BR/security/manager/chrome/pipnss/nsserrors.properties
@@ -122,6 +122,8 @@ SSL_ERROR_NEXT_PROTOCOL_DATA_INVALID=SSL received invalid NPN extension data.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SSL2=Recurso do SSL não suportado em conexões SSL 2.0.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SERVERS=Recurso do SSL não suportado em servidores.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_CLIENTS=Recurso do SSL não suportado em clientes.
+SSL_ERROR_DIGEST_FAILURE=A função Digest falhou.
+SSL_ERROR_INCORRECT_SIGNATURE_ALGORITHM=Algoritmo de assinatura incorreto especificado em um elemento assinado digitalmente.
 SEC_ERROR_IO=Ocorreu um erro de I/O durante a autorização de segurança.
 SEC_ERROR_LIBRARY_FAILURE=falha na biblioteca de segurança.
 SEC_ERROR_BAD_DATA=biblioteca de segurança: recebidos dados incorretos.
