Updating Calendar, part III

--- a/sq/toolkit/chrome/search/search.properties
+++ b/sq/toolkit/chrome/search/search.properties
@@ -3,7 +3,7 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 addEngineConfirmTitle=Shtoni Motor Kërkimesh
-addEngineConfirmation=Të shtohet "%S" te lista e motorëve të mundshëm e që duken te shtylla e kërkimeve?\n\nPrej: %S
+addEngineConfirmation=Të shtohet "%S" te lista e motorëve të mundshëm dhe që duken te shtylla e kërkimeve?\n\nPrej: %S
 addEngineAsCurrentText=Bëje këtë motorin e kërkimeve për tani
 addEngineAddButtonLabel=Shtoje
 
