--- a/it/browser/chrome/browser/devtools/webide.properties
+++ b/it/browser/chrome/browser/devtools/webide.properties
@@ -20,6 +20,7 @@ error_operationTimeout = Tempo esaurito per l’operazione: %1$S
 error_operationFail = Operazione non riuscita: %1$S
 error_cantConnectToApp = Impossibile connettersi all’app: %1$S
 error_cantFetchAddonsJSON = Impossibile ottenere l’elenco dei componenti aggiuntivi: %S
+error_appProjectsLoadFailed = Impossibile caricare la lista dei progetti. Il problema può verificarsi se questo profilo è stato utilizzato con una versione più recente di Firefox.
 addons_stable = stabile
 addons_unstable = instabile
 addons_simulator_label = Simulatore Firefox OS %1$S (%2$S)
