Bug 1083285 - Fix noisy IndexedDB error, replace with better warning.

--- a/nl/dom/chrome/dom/dom.properties
+++ b/nl/dom/chrome/dom/dom.properties
@@ -209,3 +209,5 @@ KeyNameZoomWarning=KeyboardEvent.key-waarde “Zoom” is verouderd en zal worde
 KeyNameDeadKeysWarning=KeyboardEvent.key-waarden die met “Dead” beginnen zijn verouderd en worden samengevoegd tot alleen “Dead”. Zie https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key voor meer informatie
 ImportXULIntoContentWarning=Het importeren van XUL-nodes in een inhoudsdocument wordt niet meer ondersteund. Deze functionaliteit kan binnenkort worden verwijderd.
 XMLDocumentLoadPrincipalMismatch=Gebruik van document.load is verboden bij documenten uit andere vensters. Alleen het venster waarin een document is gemaakt mag .load aanroepen voor dat document. Gebruik in plaats daarvan bij voorkeur XMLHttpRequest.
+# LOCALIZATION NOTE: Do not translate "IndexedDB".
+IndexedDBTransactionAbortNavigation=Een onvoltooide IndexedDB-transactie is afgebroken vanwege paginanavigatie.
