Bug 1078740 Add tracking controls to security notification bar

--- a/sk/suite/chrome/common/dataman/dataman.properties
+++ b/sk/suite/chrome/common/dataman/dataman.properties
@@ -32,6 +32,7 @@ perm.script.label=Spúšťanie skriptov
 perm.stylesheet.label=Načítanie šablón štýlov
 perm.sts/use.label=Použiť Strict Transport Security
 perm.sts/subd.label=Použiť Strict Transport Security pre poddomény
+perm.trackingprotection.label=Sledovanie aktivity
 
 perm.type.default=Zvoľte typ
 
