--- a/sk/suite/chrome/common/notification.properties
+++ b/sk/suite/chrome/common/notification.properties
@@ -180,8 +180,10 @@ updatePromptCheckButton.accesskey=V
 SecurityTitle=Bezpečnostné upozornenie
 MixedContentMessage=Požadujete zašifrovanú stránku, ktorá ale obsahuje aj nezašifrované informácie. Informácie, ktoré uvidíte alebo zadáte na tejto stránke, môžu byť ľahko prečítané treťou stranou.
 MixedActiveContentMessage=Požiadali ste o zabezpečenú stránku, ktorá obsahuje nebezpečné informácie. Informácie, ktoré uvidíte alebo zadáte na tejto stránke, môžu byť ľahko prečítané treťou stranou.
+TrackingContentMessage=Niektoré súčasti tejto stránky môžu sledovať vašu aktivitu online.
 MixedDisplayContentMessage=Požiadali ste o stránku, ktorá je len čiastočne zabezpečená a teda nechráni pred možným sledovaním.
 BlockedActiveContentMessage=Nebezpečné informácie na tejto stránke boli zablokované.
+BlockedTrackingContentMessage=Súčasti tejto stránky, ktoré môžu sledovať vašu aktivitu online, boli zablokované.
 BlockedDisplayContentMessage=Nezabezpečené informácie na tejto stránke boli zablokované.
 EnterInsecureMessage=Opustili ste zašifrovanú stránku. Informácie, ktoré odteraz pošlete alebo prijmete, môžu byť ľahko prečítané treťou stranou.
 EnterSecureMessage=Požiadali ste o zašifrovanú stránku. Server, ktorý stránku vytvoril, sa identifikoval správne. Informácie, ktoré uvidíte alebo zadáte na tejto stránke, nie sú ľahko čitateľné treťou stranou.
