--- a/sk/browser/chrome/browser/devtools/timeline.properties
+++ b/sk/browser/chrome/browser/devtools/timeline.properties
@@ -53,3 +53,15 @@ graphs.memory=MB
 # %1$S is replaced with one of the above label (timeline.label.*) and %2$S
 # with the details. For examples: Paint (200x100), or console.time (FOO)
 timeline.markerDetailFormat=%1$S (%2$S)
+
+# LOCALIZATION NOTE (time.markerDetail.*):
+# Strings used in the waterfall sidebar.
+timeline.markerDetail.start=Začiatok:
+timeline.markerDetail.end=Koniec:
+timeline.markerDetail.duration=Trvanie:
+timeline.markerDetail.consoleTimerName=Názov časovača:
+timeline.markerDetail.DOMEventType=Typ udalosti:
+timeline.markerDetail.DOMEventPhase=Fáza:
+timeline.markerDetail.DOMEventTargetPhase=Cieľ
+timeline.markerDetail.DOMEventCapturingPhase=Capturing
+timeline.markerDetail.DOMEventBubblingPhase=Bubbling
