Bug 1096310 - Show message after project list load error

--- a/sk/browser/chrome/browser/devtools/webide.properties
+++ b/sk/browser/chrome/browser/devtools/webide.properties
@@ -42,6 +42,8 @@ error_cantConnectToApp=Nie je možné pripojiť sa k aplikácii: %1$S
 # Variable: error message (in english)
 error_cantFetchAddonsJSON=Nie je možné získať zoznam doplnkov: %S
 
+error_appProjectsLoadFailed=Nebolo možné načítať zoznam projektov. Toto sa môže stať, ak ste tento profil použili s novšou verziou Firefoxu.
+
 addons_stable=stabilný
 addons_unstable=nestabilný
 # LOCALIZATION NOTE (addons_simulator_label): This label is shown as the name of
