--- a/sq/browser/chrome/browser/devtools/scratchpad.properties
+++ b/sq/browser/chrome/browser/devtools/scratchpad.properties
@@ -83,6 +83,17 @@ scratchpad.label=Fletë e Papastër
 # window.
 scratchpad.tooltip=Fletë e Papastër
 
+# LOCALIZATION NOTE (selfxss.msg): the text that is displayed when
+# a new user of the developer tools pastes code into the console
+# %1 is the text of selfxss.okstring
+selfxss.msg=Sinjalizim Mashtrimi: Bëni kujdes kur kopjoni dhe ngjitni gjëra që nuk i kuptoni. Kjo mund t’u lejojë agresorëve të vjedhin identitetin tuaj ose të marrin nën kontroll kompjuterin tuaj. Ju lutemi, shtypni '%S' më poshtë që të lejoni ngjitjen.
+
+Sinjalizim Mashtrimi: Bëni kujdes kur kopjoni dhe ngjitni gjëra që nuk i kuptoni. Kjo mund t’u lejojë agresorëve të vjedhin identitetin tuaj ose të marrin nën kontroll kompjuterin tuaj. Ju lutemi, shtypni '%S' më poshtë që të lejoni ngjitjen.
+
+
+
+
+
 # LOCALIZATION NOTE (propertiesFilterPlaceholder): this is the text that
 # appears in the filter text box for the properties view container.
 propertiesFilterPlaceholder=Filtroni veti
