--- a/sq/browser/chrome/browser/devtools/storage.properties
+++ b/sq/browser/chrome/browser/devtools/storage.properties
@@ -52,7 +52,7 @@ table.emptyText=Pa të dhëna të pranishme për strehën e përzgjedhur
 tree.labels.cookies=Cookies
 tree.labels.localStorage=Depozitim Vendor
 tree.labels.sessionStorage=Depozitim Sesioni
-#tree.labels.indexedDB=Indexed DB
+tree.labels.indexedDB=IndexedDB
 
 # LOCALIZATION NOTE (table.headers.*.*):
 # These strings are the header names of the columns in the Storage Table for
