[fa] update from Pootle (firefox)

--- a/fa/browser/chrome/browser/browser.properties
+++ b/fa/browser/chrome/browser/browser.properties
@@ -172,6 +172,8 @@ PluginVulnerableUpdatable=این افزودنی آسیب‌پذیر است و ب
 PluginVulnerableNoUpdate=این افزودنی دارای مشکل امنیتی است.
 
 # infobar UI
+pluginContinueBlocking.label=همچنان مسدود کن
+pluginContinueBlocking.accesskey=م
 # LOCALIZATION NOTE (pluginActivateTrigger): Use the unicode ellipsis char, \u2026,
 # or use "..." if \u2026 doesn't suit traditions in your locale.
 pluginActivateTrigger.label=اجازه دادن
@@ -186,6 +188,7 @@ sanitizeButtonOK=همین حالا پاک‌سازی کن
 # LOCALIZATION NOTE (sanitizeButtonClearing): The label for the default
 # button between the user clicking it and the window closing.  Indicates the
 # items are being cleared.
+sanitizeButtonClearing=پاک‌سازی\u0020
 
 # LOCALIZATION NOTE (sanitizeEverythingWarning2): Warning that appears when
 # "Time range to clear" is set to "Everything" in Clear Recent History dialog,
@@ -346,6 +349,7 @@ webNotifications.showFromSite=آیا میخواهید آگاه‌سازی ها  
 
 pointerLock.allow2=مخفی کردن اشاره‌‎‏گر
 pointerLock.allow2.accesskey=H
+pointerLock.alwaysAllow=همیشه اجازه مخفی شدن بده
 pointerLock.alwaysAllow.accesskey=A
 pointerLock.neverAllow=هرگز اجازه مخفی کردن نده
 pointerLock.neverAllow.accesskey=N
