--- a/sl/netwerk/necko.properties
+++ b/sl/netwerk/necko.properties
@@ -37,3 +37,5 @@ PhishingAuth=Obiskali boste stran "%1$S". Ta stran vas morda poskuša zaslepiti,
 PhishingAuthAccept=Razumem in bom previden
 SuperfluousAuth=Na stran "%1$S" se boste prijavili z uporabniškim imenom "%2$S", a spletna stran ne zahteva overjanja. To je morda poskus, da vas prelisiči.\n\nŽelite resnično obiskati stran "%1$S"?
 AutomaticAuth=Na stran "%1$S" se boste prijavili z uporabniškim imenom "%2$S".
+
+TrackingUriBlocked=Vir "%1$S" je bil zavrnjen, ker je omogočena zaščita pred sledenjem.
