--- a/nl/browser/chrome/browser/devtools/toolbox.properties
+++ b/nl/browser/chrome/browser/devtools/toolbox.properties
@@ -78,3 +78,8 @@ options.darkTheme.label=Donker thema
 # LOCALIZATION NOTE (options.lightTheme.label)
 # Used as a label for light theme
 options.lightTheme.label=Licht thema
+
+# LOCALIZATION NOTE (toolbox.noContentProcess.message)
+# Used as a message in the alert displayed when trying to open a browser
+# content toolbox and there is no content process running
+toolbox.noContentProcess.message=Geen inhoudproces actief.
