--- a/sl/browser/chrome/browser/browser.properties
+++ b/sl/browser/chrome/browser/browser.properties
@@ -604,3 +604,12 @@ slowStartup.disableNotificationButton.accesskey = A
 customizeTips.tip0 = %1$S: %2$S lahko prikrojite svojim željam. Povlecite predmete v meni ali orodno vrstico. %3$S o prilagajanju %2$Sa.
 customizeTips.tip0.hint = Namig
 customizeTips.tip0.learnMore = Preberite več
+
+# LOCALIZATION NOTE(appmenu.*.description, appmenu.*.label): these are used for
+# the appmenu labels and buttons that appear when an update is staged for
+# installation or a background update has failed and a manual download is required.
+# %S is brandShortName
+appmenu.restartNeeded.description = Za uveljavitev posodobitev ponovno zaženite %S
+appmenu.updateFailed.description = Posodobitev v ozadju ni uspela, zato jo morate prenesti sami
+appmenu.restartBrowserButton.label = Ponovno zaženi %S
+appmenu.downloadUpdateButton.label = Prenesi posodobitev
