Browser Aurora, Part 2

--- a/sl/browser/chrome/browser/devtools/timeline.properties
+++ b/sl/browser/chrome/browser/devtools/timeline.properties
@@ -38,3 +38,4 @@ timeline.records=ZAPISI
 timeline.label.styles=Slog
 timeline.label.reflow=Prerazporeditev
 timeline.label.paint=Barvanje
+timeline.label.domevent=Dogodek DOM
