--- a/sl/browser/chrome/browser/shellservice.properties
+++ b/sl/browser/chrome/browser/shellservice.properties
@@ -3,7 +3,7 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 optionsLabel=&Možnosti %S
-safeModeLabel=&Varni način %S
+safeModeLabel=%S: &Varni način
 
 # LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
 # %S will be replaced by brandShortName
