--- a/sl/browser/installer/custom.properties
+++ b/sl/browser/installer/custom.properties
@@ -20,7 +20,7 @@
 
 REG_APP_DESC=$BrandShortName prinaša varno, enostavno brskanje po spletu. Znan uporabniški vmesnik, okrepljene varnostne možnosti - vključno z zaščito pred spletno krajo identitete - in vgrajeno iskanje vam omogočajo, da odnesete kar največ od svetovnega spleta.
 CONTEXT_OPTIONS=M$ožnosti programa $BrandShortName
-CONTEXT_SAFE_MODE=$Varni način programa $BrandShortName
+CONTEXT_SAFE_MODE=$BrandShortName: $Varni način
 OPTIONS_PAGE_TITLE=Vrsta namestitve
 OPTIONS_PAGE_SUBTITLE=Izberite možnosti namestitve
 SHORTCUTS_PAGE_TITLE=Postavitev bližnjic
