Popup -> pojavno okno (namesto neželeno)

--- a/sl/browser/chrome/browser/preferences/preferences.properties
+++ b/sl/browser/chrome/browser/preferences/preferences.properties
@@ -19,8 +19,8 @@ cookiepermissionstext=Določite, katere strani smejo vedno uporabljati piškotke
 cookiepermissionstitle=Izjeme: piškotki
 addonspermissionstext=Določite, katere strani smejo nameščati dodatke. Vnesite točen naslov strani, nato pa kliknite gumb Dovoli.
 addons_permissions_title=Dovoljene strani: namestitev dodatkov
-popuppermissionstitle=Dovoljene strani: neželena okna
-popuppermissionstext=Določite, katere strani smejo odpirati neželena okna. Vnesite točen naslov strani, nato pa kliknite gumb Dovoli.
+popuppermissionstitle=Dovoljene strani: pojavna okna
+popuppermissionstext=Določite, katere strani smejo odpirati pojavna okna. Vnesite točen naslov strani, nato pa kliknite gumb Dovoli.
 invalidURI=Prosim, vnesite veljaven naslov.
 invalidURITitle=Neveljaven naslov
 
