--- a/sl/browser/chrome/browser/sitePermissions.properties
+++ b/sl/browser/chrome/browser/sitePermissions.properties
@@ -13,7 +13,7 @@ permission.image.label = Naloži slike
 permission.camera.label = Uporabi kamero
 permission.microphone.label = Uporabi mikrofon
 permission.install.label = Namesti dodatke
-permission.popup.label = Odpri neželena okna
+permission.popup.label = Odpri pojavna okna
 permission.geo.label = Objavi položaj
 permission.indexedDB.label = Shramba za delo brez povezave
 permission.fullscreen.label = Celoten zaslon
