--- a/sl/browser/chrome/browser/browser.properties
+++ b/sl/browser/chrome/browser/browser.properties
@@ -87,15 +87,15 @@ lwthemeNeedsRestart.accesskey=P
 # LOCALIZATION NOTE (popupWarning.message): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is brandShortName and #2 is the number of pop-ups blocked.
-popupWarning.message=#1 je tej strani preprečil, da bi odprla neželeno okno.;#1 je tej strani preprečil, da bi odprla več neželenih oken (#2).
+popupWarning.message=#1 je tej strani preprečil, da bi odprla pojavno okno.;#1 je tej strani preprečil, da bi odprla več pojavnih oken (#2).
 popupWarningButton=Možnosti
 popupWarningButton.accesskey=M
 popupWarningButtonUnix=Nastavitve
 popupWarningButtonUnix.accesskey=N
-popupAllow=Dovoli strani %S odpiranje neželenih oken
-popupBlock=Prepovej strani %S odpiranje neželenih oken
-popupWarningDontShowFromMessage=Ne prikazuj tega sporočila, ko so neželena okna zavrnjena
-popupWarningDontShowFromLocationbar=Ne prikazuj obvestil, ko so neželena okna zavrnjena
+popupAllow=Dovoli strani %S odpiranje pojavnih oken
+popupBlock=Prepovej strani %S odpiranje pojavnih oken
+popupWarningDontShowFromMessage=Ne prikazuj tega sporočila, ko so pojavna okna zavrnjena
+popupWarningDontShowFromLocationbar=Ne prikazuj obvestil, ko so pojavna okna zavrnjena
 popupShowPopupPrefix=Pokaži '%S'
 
 # Bad Content Blocker Doorhanger Notification
