--- a/sl/mobile/android/chrome/browser.properties
+++ b/sl/mobile/android/chrome/browser.properties
@@ -64,7 +64,7 @@ notificationRestart.button=Ponovni zagon
 
 # LOCALIZATION NOTE (popup.message): Semicolon-separated list of plural forms.
 # #1 is brandShortName and #2 is the number of pop-ups blocked.
-popup.message=#1 je tej strani preprečil, da bi odprla neželeno okno. Bi ga radi prikazali?;#1 je tej strani preprečil, da bi odprla več neželenih oken (#2). Bi jih radi prikazali?
+popup.message=#1 je tej strani preprečil, da bi odprla pojavno okno. Bi ga radi prikazali?;#1 je tej strani preprečil, da bi odprla več pojavnih oken (#2). Bi jih radi prikazali?
 popup.dontAskAgain=Ne sprašuj več za to stran
 popup.show=Prikaži
 popup.dontShow=Ne prikazuj
