--- a/it/browser/chrome/browser/search.properties
+++ b/it/browser/chrome/browser/search.properties
@@ -4,7 +4,7 @@
 
 searchtip = Cerca con %S
 searchPlaceholder = Cerca
-searchHeader = Ricerca %S
+searchHeader = Cerca con %S
 cmd_pasteAndSearch = Incolla e cerca
 cmd_clearHistory = Cancella la cronologia di ricerca
 cmd_clearHistory_accesskey = n
