[ta] update from Pootle (firefox)

--- a/ta/browser/chrome/browser/devtools/webide.properties
+++ b/ta/browser/chrome/browser/devtools/webide.properties
@@ -22,6 +22,7 @@ project_tab_loading=ஏற்றுகிறது…
 
 # Variable: error message (in english)
 
+
 addons_stable=நிலையானது
 addons_unstable=நிலையற்றது
 # LOCALIZATION NOTE (addons_simulator_label): This label is shown as the name of
@@ -37,3 +38,5 @@ addons_status_installing=நிறுவுகிறது
 runtimedetails_checkunkown=அறியாத
 
 # Validation status
+
+# Preferences
