--- a/ta/security/manager/chrome/pippki/pippki.properties
+++ b/ta/security/manager/chrome/pippki/pippki.properties
@@ -73,18 +73,11 @@ pageInfo_NoEncryption=இணைப்பு குறிமுறையாக்
 pageInfo_Privacy_None1=The web site %S does not support  encryption for the page you are viewing.
 pageInfo_Privacy_None2=Information sent over the Internet without  encryption can be seen by other people while it is in transit.
 pageInfo_Privacy_None3=நீங்கள் பார்வையிடும் பக்கம் குறிமுறையாக்கப்படவில்லை.
-# LOCALIZATION NOTE (pageInfo_StrongEncryptionWithBits): %1$S is the name of the encryption standard,
+# LOCALIZATION NOTE (pageInfo_EncryptionWithBitsAndProtocol): %1$S is the name of the encryption standard,
 # %2$S is the key size of the cipher.
-pageInfo_StrongEncryptionWithBits=Connection Encrypted:  High-grade Encryption (%1$S, %2$S bit keys)
-pageInfo_Privacy_Strong1=The page you are viewing was  encrypted before being transmitted over the Internet.
-pageInfo_Privacy_Strong2=Encryption makes it very  difficult for unauthorized people to view information traveling between computers. It is therefore very unlikely that anyone read this page as it traveled across the network.
-# LOCALIZATION NOTE (pageInfo_WeakEncryptionWithBits): %1$S is the name of the encryption standard,
-# %2$S is the key size of the cipher.
-pageInfo_WeakEncryptionWithBits=Connection  Encrypted: Low-grade Encryption (%1$S, %2$S bit keys)
-pageInfo_Privacy_Weak1=The web site %S is using low-grade encryption for the page you are viewing.
-pageInfo_Privacy_Weak2=Low-grade encryption may allow  some unauthorized people to view this information.
+# %3$S is protocol version like "SSL 3" or "TLS 1.2"
+pageInfo_Privacy_Encrypted1=The page you are viewing was  encrypted before being transmitted over the Internet.
 pageInfo_MixedContent=Connection  Partially Encrypted
-pageInfo_Privacy_Mixed1=Parts of the page you are viewing were  not encrypted before being transmitted over the Internet.
 
 #Cert Viewer
 certDetails=சான்றிதழ் காட்டி:
@@ -151,17 +144,12 @@ writeFileUnknownError=தெரியாத பிழை
 addExceptionBrandedWarning2=You are about to override  how %S identifies this site.
 addExceptionInvalidHeader=This site attempts to identify  itself with invalid information.
 addExceptionDomainMismatchShort=தவறான இணைய தளம்
-addExceptionDomainMismatchLong=Certificate belongs to a different site,  which could indicate an identity theft.
 addExceptionExpiredShort=முடிவுற்ற தகவல்
-addExceptionExpiredLong=Certificate is not currently valid. It is impossible  to verify whether this identity was reported as stolen or lost.
 addExceptionUnverifiedOrBadSignatureShort=தெரியாத அடையாளம்
-addExceptionUnverifiedOrBadSignatureLong=அடையாளம் காணப்படும் ஒரு அங்கீகரிப்பு ஆணையத்தால் உறுதிப்படுத்தப்படாததால், இந்த சான்றிதழ் நம்பகமானதல்ல.
 addExceptionValidShort=சரியான சான்றிதழ்
 addExceptionValidLong=இந்த இணைய தளம் சரியான, சரிபார்க்கப்பட்ட அடையாளத்தை கொடுக்கிறது. ஒரு விதிவிலக்கை சேர்க்க வேண்டாம்.
 addExceptionCheckingShort=தகவலை சோதிக்கிறது
-addExceptionCheckingLong=இணையதளத்தை அடையாளப்படுத்த முயற்சிக்கிறது…
 addExceptionNoCertShort=தகவல் எதுவும் இல்லை
-addExceptionNoCertLong=கொடுக்கப்பட்ட இணையதளத்திற்கு அடையாள நிலை பெற முடியவில்லை.
 addExceptionConnectionFailed=இணைப்பு துண்டிக்கப்பட்டது
 
 #Certificate Exists in database
