--- a/ta/browser/chrome/browser/devtools/gclicommands.properties
+++ b/ta/browser/chrome/browser/devtools/gclicommands.properties
@@ -20,6 +20,9 @@ helpDesc=இருக்கும் கட்டளைகள் குறித
 # explain the contents of the command help table.
 helpAvailable=இருக்கும் கட்டளைகள்
 
+# LOCALIZATION NOTE (notAvailableInE10S) Used in the output of any command that
+# is not compatible with multiprocess mode (E10S).
+
 # LOCALIZATION NOTE (consoleDesc) A very short string used to describe the
 # function of the console command.
 consoleDesc=கன்சோலைக் கட்டுப்படுத்துவதற்கான கட்டளைகள்
