--- a/ta/browser/chrome/browser/newTab.properties
+++ b/ta/browser/chrome/browser/newTab.properties
@@ -8,17 +8,23 @@ newtab.block=இந்த தளத்தை நீக்கு
 # LOCALIZATION NOTE(newtab.sponsored.button): This text appears for sponsored
 # and enhanced tiles on the same line as the tile's title, so prefer short
 # strings to avoid overlap. This string should be uppercase.
+newtab.sponsored.button=SPONSORED
 # LOCALIZATION NOTE(newtab.sponsored.explain): %1$S will be replaced inline by
 # the (X) block icon. %2$S will be replaced by an active link using string
 # newtab.learn.link as text.
+newtab.sponsored.explain=இந்த அடுக்கு ஒரு மொசில்லா பங்குதாரர் சார்பாக உங்களுக்கு காட்டப்படும். நீங்கள் %1$S பொத்தானை சொடுக்குவதன் மூலம் எந்த நேரத்திலும் அதை நீக்க முடியும். %2$S
 # LOCALIZATION NOTE(newtab.enhanced.explain): %1$S will be replaced inline by
 # the gear icon used to customize the new tab window. %2$S will be replaced by
 # an active link using string newtab.learn.link as text.
+newtab.enhanced.explain=ஒரு மோசில்லா பங்குதாரர் திரைபிடிப்புக்கு பதிலாக, இந்த அடுக்கை உயர்த்திக் காட்டியுள்ளார். நீங்கள் உங்கள் விருப்பங்களை %1$S பொத்தானை சொடுக்குவதன் மூலம் மேம்படுத்தப்பட்ட அடுக்குகளை அணைக்க முடியும். %2$S
 # LOCALIZATION NOTE(newtab.intro.paragraph1): %1$S will be replaced inline by
 # active link using string newtab.learn.link as text.
+newtab.intro.paragraph1=நீங்கள் ஒரு புதிய கீற்றைத் திறக்கும் போது, நீங்கள் அடிக்கடி பார்த்த தளங்களையும், உங்களுக்கு பிடிக்கும் எனக்கருதப்பட்ட ஓடுகளையும் இணைத்து பாட்டப்படும். இந்த ஓடுகளில் சில மொசில்லா பங்காளிகளின் நிதியுதவி மூலம் கிடைத்தது. நாங்கள் எப்போதும் நிதிவுதவி செய்யப்பட்ட ஓடுகளை எது என்பதை குறித்துக்காட்டுவோம். %1$S
 # LOCALIZATION NOTE(newtab.intro.paragraph2): %1$S will be replaced inline by
 # active link using string newtab.privacy.link as text.
+newtab.intro.paragraph2=இச்சேவையை வழங்க மொசில்லா, உங்களின் ஓடுகளில் பயன்படுத்தப்படும் சில தகவல்களை ஆரயாப் பயன்படுத்துகிறது இது %1$S என்பதற்கு கட்டுப்பட்டது.
 # LOCALIZATION NOTE(newtab.intro.paragraph3): %1$S will be replaced inline by
 # the gear icon used to customize the new tab window.
+newtab.intro.paragraph3=உங்களின் முன்னுரிமைகளுக்காக நீங்கள் இந்த ஓடு வசதிகளை அணைக்க %1$S பொத்தான் மீது சொடுக்கவும்.
 newtab.learn.link=மேலும் அறிக...
 newtab.privacy.link=தனியுரிம கொள்கை
