--- a/ta/browser/chrome/browser/shellservice.properties
+++ b/ta/browser/chrome/browser/shellservice.properties
@@ -17,6 +17,12 @@ setDefaultBrowserNotNow.accesskey  = N
 setDefaultBrowserNever.label       = மீண்டும் கேட்காதே
 setDefaultBrowserNever.accesskey   = D
 
+# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk):
+# These strings are used as an alternative to the ones above, in a modal dialog.
+# %S will be replaced by brandShortName
+setDefaultBrowserTitle=இயல்பான உலாவி
+setDefaultBrowserMessage=%S உங்கள் இயல்பான உலாவியாக தற்போது அமைக்கப்படவில்லை. இதை உங்கள் இயல்பான உலாவியாக அமைக்க விருப்பமா?
+setDefaultBrowserDontAsk=%S ஐ துவக்கும் போதெல்லாம் இந்த சோதனையை செய்யவும்.
 
 desktopBackgroundLeafNameWin=Desktop Background.bmp
 DesktopBackgroundDownloading=படத்தை சேமிக்கிறது...
